--- a/css/style.css
+++ b/css/style.css
@@ -811,23 +811,26 @@ button.button-light {
 table.table {
   margin-top: 20px;
   margin-bottom: 40px;
-  border: 1px solid #e4e4e4;
   /* end thead */
   /* end tbody */ }
-  table.table thead {
+  table.table tr td:first-child {
+    border: none; }
+  table.table tr:first-child td {
+    border-top: none; }
+  table.table thead th {
+    font-size: 0.8em;
+    font-weight: 400;
+    padding: 0.5rem;
+    text-align: center;
     background-color: #f8f8f8;
-    border: 1px solid #cbcbcb; }
-    table.table thead th {
-      font-size: 0.8em;
-      font-weight: 400;
-      padding: 0.5rem;
-      text-align: center; }
-    table.table thead th.auction-details {
-      text-align: left; }
+    border-top: 1px solid #cbcbcb;
+    border-bottom: 1px solid #cbcbcb; }
+  table.table thead th.auction-details {
+    text-align: left;
+    padding-left: 4%; }
   table.table tbody th {
     padding: 0;
-    width: 135px;
-    padding-right: 3%; }
+    width: 135px; }
   table.table tbody td {
     border: 1px solid #e4e4e4;
     text-align: center;
@@ -836,7 +839,8 @@ table.table {
       margin-bottom: 0; }
   table.table tbody td.auction-details {
     text-align: left;
-    border-left: none; }
+    border-left: none;
+    padding-left: 4%; }
     table.table tbody td.auction-details p:first-child {
       font-size: 1.3rem; }
     table.table tbody td.auction-details p:last-child {
@@ -847,6 +851,13 @@ table.table {
     font-size: 0.72em; }
   table.table tbody td:last-child {
     font-size: 0.8em; }
+  table.table thead tr th.check {
+    background-color: white;
+    border: none; }
+  table.table thead tr th:last-child {
+    border-right: 1px solid #cbcbcb; }
+  table.table thead tr th.table-images {
+    border-left: 1px solid #cbcbcb; }
 
 /* end table */
 /***  positioning elements  ***/
