--- a/css/style.scss
+++ b/css/style.scss
@@ -397,6 +397,10 @@ table.table {
     border-left: 1px solid #cbcbcb;
   }
 
+  tbody tr td.check {
+    padding-left: 0;
+  }
+
 }/* end table */
 
 
