Code meer herbruikbaar gemaakt, profile pagina toegevoegd

--- a/css/partials/_add-auction.scss
+++ b/css/partials/_add-auction.scss
@@ -19,7 +19,7 @@
 .upload-photos-info, .attention-info {
   p {
     margin-bottom: 0.2em;
-    font-size: $font-medium-large;
+    font-size: $font-medium;
   }
 }
 
@@ -35,7 +35,7 @@
 .add-auction-question {
   text-align: center;
   margin-top: 20px;
-  font-size: $font-medium-large;
+  font-size: $font-medium;
 
   a:last-child {
     margin-left: 5px;
