--- a/css/partials/_home.scss
+++ b/css/partials/_home.scss
@@ -64,7 +64,7 @@ z-index: 1;
 
     p {
     color: $secondary-color-light;
-    font-size: $font-medium-large;
+    font-size: $font-medium;
     margin-bottom: 0;
     }
 
