--- a/css/partials/_search.scss
+++ b/css/partials/_search.scss
@@ -87,7 +87,7 @@ form.form-search {
 
 
     p {
-      font-size: $font-medium-large;
+      font-size: $font-medium;
       color: #5c5c5c;
       margin-bottom: 0;
 
