--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -2,11 +2,11 @@ $container-width: 70%;
 $primary-color: #06137b;
 $secondary-color-dark: #4f4f4f;
 $secondary-color-light: #fff;
-$hover-color: #0c20c5;
+$hover-color-nav-link: #0c20c5;
 $hover-color-nav: #1a1919;
 $font-small: 0.72em;
 $font-medium-small: 0.8em;
-$font-medium-large: 0.9em;
+$font-medium: 0.9em;
 
 
 
@@ -76,7 +76,7 @@ $font-medium-large: 0.9em;
        padding-left: 1.7em;
 
        &:hover {
-         color: $hover-color;
+         color: $hover-color-nav-link;
        }
 
        &:active, &:focus {
@@ -244,7 +244,7 @@ width: 30%;
 }
 
 .bottom-nav {
-    font-size: $font-medium-large;
+    font-size: $font-medium;
     font-weight: 700;
     margin-left: 15%;
 }
@@ -307,7 +307,7 @@ width: 12%;
         margin-left: 10%;
 
             &:hover {
-            color: $hover-color;
+            color: $hover-color-nav-link;
             }
 
             &:active, &:focus {
