--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,9 @@ button.button-light.search-button {
   border-top: none;
   padding: 0.75em 0.5em 0.75em 1.5em; }
 
+.clearfix .button-light:last-child.search-button {
+  margin-right: 0; }
+
 .questions-faq {
   margin-top: 20px; }
 
