--- a/css/style.scss
+++ b/css/style.scss
@@ -13,11 +13,11 @@ $primary-color: #06137b;
 $secondary-color-dark: #4f4f4f;
 $secondary-color-light: #fff;
 $link-color: #01a6a0;
-$hover-color: #0c20c5;
+$hover-color-nav-link: #0c20c5;
 $hover-color-nav: #2c2b2b;
 $font-small: 0.72em;
 $font-medium-small: 0.8em;
-$font-medium-large: 0.9em;
+$font-medium: 0.9em;
 
 
 
@@ -77,7 +77,7 @@ a {
   }
 
   .small-grey {
-    font-size: $font-medium-large;
+    font-size: $font-medium;
     color: #767676;
   }
 
@@ -149,7 +149,7 @@ a {
     }
 
     ::placeholder {
-      font-size: $font-medium-large;
+      font-size: $font-medium;
     }
 
     .col {
@@ -170,7 +170,7 @@ a {
       background-color: #757575;
       color: white;
       font-weight: 600;
-      font-size: $font-medium-large;
+      font-size: $font-medium;
       border: 2px solid #757575;
 
       &:hover, &:focus {
@@ -273,7 +273,7 @@ a {
   margin-bottom: 30px;
 
   label.form-check-label {
-  font-size: $font-medium-large;
+  font-size: $font-medium;
   color: $secondary-color-dark;
   font-weight: 400;
 
