--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@
 @import "partials/add-auction";
 @import "partials/register";
 @import "partials/table";
+@import "partials/profile";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
