--- a/css/partials/_profile.scss
+++ b/css/partials/_profile.scss
@@ -102,4 +102,45 @@
     padding-right: 0;
   }
 
+
+  .position {
+    position: relative;
+    overflow: hidden;
+
+
+    img {
+      position: relative;
+    }
+
+
+    .overlay {
+      background-color: rgba(82, 81, 81, 0.61);
+      opacity: 0;
+      transition: all .4s ease-in-out;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      a img {
+        width: 50%;
+        margin-left: 25%;
+      }
+
+    }
+  }
+
+
+  .col-md-3:hover{
+    .position{
+
+      .overlay {
+        opacity: 1;
+      }
+
+    }
+  }
+
+
+
 }
