--- a/css/partials/_profile.scss
+++ b/css/partials/_profile.scss
@@ -69,7 +69,7 @@
 
 #SliderAuctions .carousel-control-prev, #SliderAuctions .carousel-control-next {
   background-color: rgba(7, 7, 7, 0.50);
-  height: 62.5%;
+  //height: 62.5%;
 
   &.left, &.right{
     background-image: none;
